WRP-2690 - fixed issue relating to the “request followup” checkbox and text not being aligned, also resolved issue with the send feedback button not correctly aligned. Also, altered styling of the concept filter to look better with the other elements and added in some breathing room for the feedback box to not be up against the scroll bar

--- a/app/styles/dark.scss
+++ b/app/styles/dark.scss
@@ -18,7 +18,7 @@ lightest bg #525463
     background: #57a5cc;
 }
 .sca-dark input.form-control,
-input[type=text] {
+ {
     box-shadow: inset 0 -1px 0 #1f2731;
 }
 .sca-dark .border-right {
